--- a/project.json
+++ b/project.json
@@ -5,21 +5,22 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[3.2.1]",
-    "UiPath.System.Activities": "[25.10.0]",
-    "UiPath.UIAutomation.Activities": "[25.10.16]"
+    "UiPath.System.Activities": "[25.10.1]",
+    "UiPath.UIAutomation.Activities": "[25.10.16]",
+    "UiPathTeam.AttendedRobotStatus.Activities": "[2.0.0]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "25.10.0.0",
-  "projectVersion": "1.0.8",
+  "projectVersion": "1.0.13",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
     "isPausable": true,
-    "isAttended": false,
+    "isAttended": true,
     "requiresUserInteraction": true,
-    "supportsPersistence": false,
+    "supportsPersistence": true,
     "workflowSerialization": "NewtonsoftJson",
     "excludedLoggedData": [
       "Private:*",
